kubernetes/argo-cd/applications/production-hm/mlflow/kubernetes-manifests/hm-mlflow-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hm-mlflow-ingress
  namespace: production-hm-mlflow
  annotations:
    kubernetes.io/ingress.class: traefik
    # https://doc.traefik.io/traefik/routing/providers/kubernetes-ingress/#on-ingress
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: 'true'
    # https://kubernetes-sigs.github.io/external-dns/latest/annotations/annotations
    external-dns.alpha.kubernetes.io/hostname: hm-mlflow.internal.hongbomiao.com
    # https://argo-cd.readthedocs.io/en/stable/user-guide/resource_hooks
    argocd.argoproj.io/hook: PostSync
  labels:
    app.kubernetes.io/name: hm-mlflow-ingress
    app.kubernetes.io/part-of: production-hm-mlflow
spec:
  rules:
    - host: hm-mlflow.internal.hongbomiao.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hm-mlflow-tracking
                port:
                  number: 80
  tls:
    - hosts:
        - hm-mlflow.internal.hongbomiao.com
      secretName: production-hm-mlflow-certificate
